--- a/server/.env
+++ b/server/.env
@@ -15,4 +15,5 @@ CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
 
 # Storage
-MEDIA_ROOT=/app/server/media
+# Usar ruta relativa para desarrollo local
+# MEDIA_ROOT=/app/server/media
