--- a/server/.env.example
+++ b/server/.env.example
@@ -1,18 +1,81 @@
-# Django
-DJANGO_SECRET_KEY=change-me
-DJANGO_DEBUG=1
+# =============================================================================
+# PA vs SV - Environment Configuration
+# =============================================================================
+# Copy this file to .env and modify values as needed
+
+# =============================================================================
+# Django Settings
+# =============================================================================
+DJANGO_SECRET_KEY=your-super-secret-key-change-in-production
+DJANGO_DEBUG=0
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (Docker)
+# =============================================================================
+# Database (PostgreSQL)
+# =============================================================================
 POSTGRES_DB=pavssv
 POSTGRES_USER=pavssv
-POSTGRES_PASSWORD=pavssv
+POSTGRES_PASSWORD=your-secure-password-here
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-# Redis / Celery
+# Use SQLite instead of PostgreSQL (for local development without Docker)
+USE_SQLITE=0
+
+# =============================================================================
+# MinIO / S3 Storage
+# =============================================================================
+# Enable S3-compatible storage (MinIO in dev, AWS S3 in production)
+USE_S3_STORAGE=true
+
+# MinIO credentials (development)
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin123
+MINIO_DOMAIN=localhost
+
+# S3/MinIO connection
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin123
+AWS_S3_ENDPOINT_URL=http://minio:9000
+AWS_S3_REGION_NAME=us-east-1
+AWS_S3_SIGNATURE_VERSION=s3v4
+
+# Bucket names
+AWS_STORAGE_BUCKET_NAME=pavssv-artifacts
+AWS_INPUTS_BUCKET=pavssv-inputs
+AWS_ARTIFACTS_BUCKET=pavssv-artifacts
+AWS_EXPORTS_BUCKET=pavssv-exports
+
+# For production AWS S3 (comment out ENDPOINT_URL for real S3)
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS_S3_ENDPOINT_URL=
+# AWS_S3_REGION_NAME=us-east-1
+
+# =============================================================================
+# Celery (Background Tasks)
+# =============================================================================
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
 
-# Storage
-MEDIA_ROOT=/app/server/media
+# =============================================================================
+# CORS Configuration
+# =============================================================================
+# Comma-separated list of allowed origins
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8001
+
+# =============================================================================
+# CSRF Configuration
+# =============================================================================
+CSRF_TRUSTED_ORIGINS=http://localhost:8001,http://127.0.0.1:8001
+
+# =============================================================================
+# Security Settings (Production)
+# =============================================================================
+# Enable HTTPS redirect in production
+SECURE_SSL_REDIRECT=false
+
+# =============================================================================
+# Logging
+# =============================================================================
+DJANGO_LOG_LEVEL=INFO
