--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,11 +9,67 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - pavssv-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-pavssv}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
     ports:
       - "6379:6379"
+    networks:
+      - pavssv-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # MinIO - Object Storage compatible con S3
+  minio:
+    image: minio/minio:latest
+    container_name: pavssv-minio
+    ports:
+      - "9000:9000"   # API S3
+      - "9001:9001"   # Console Web
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin123}
+      # Configuración de identidad para migración a AWS S3
+      MINIO_DOMAIN: ${MINIO_DOMAIN:-localhost}
+    volumes:
+      - minio_data:/data
+    networks:
+      - pavssv-network
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+  # Inicialización de buckets MinIO
+  minio-init:
+    image: minio/mc:latest
+    depends_on:
+      minio:
+        condition: service_healthy
+    networks:
+      - pavssv-network
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://minio:9000 $${MINIO_ROOT_USER:-minioadmin} $${MINIO_ROOT_PASSWORD:-minioadmin123};
+      mc mb --ignore-existing myminio/pavssv-inputs;
+      mc mb --ignore-existing myminio/pavssv-artifacts;
+      mc mb --ignore-existing myminio/pavssv-exports;
+      mc anonymous set download myminio/pavssv-exports;
+      echo 'MinIO buckets initialized successfully';
+      exit 0;
+      "
 
   web:
     build:
@@ -21,15 +77,36 @@ services:
       dockerfile: server/Dockerfile
     env_file:
       - .env
+    environment:
+      # Configuración de storage (MinIO/S3)
+      USE_S3_STORAGE: ${USE_S3_STORAGE:-true}
+      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
+      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
+      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
+      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
+      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
+      AWS_S3_SIGNATURE_VERSION: ${AWS_S3_SIGNATURE_VERSION:-s3v4}
+      AWS_S3_FILE_OVERWRITE: "false"
+      AWS_DEFAULT_ACL: "private"
+      # Database
+      POSTGRES_HOST: db
+      USE_SQLITE: "0"
     volumes:
       - ..:/app
-      - media:/app/server/media
     ports:
       - "8001:8001"
-    command: python manage.py runserver 0.0.0.0:8001
+    command: >
+      sh -c "python manage.py migrate --noinput &&
+             python manage.py runserver 0.0.0.0:8001"
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    networks:
+      - pavssv-network
 
   worker:
     build:
@@ -37,14 +114,32 @@ services:
       dockerfile: server/Dockerfile
     env_file:
       - .env
+    environment:
+      USE_S3_STORAGE: ${USE_S3_STORAGE:-true}
+      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
+      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
+      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
+      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
+      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
+      POSTGRES_HOST: db
+      USE_SQLITE: "0"
     volumes:
       - ..:/app
-      - media:/app/server/media
     command: celery -A pavssv_server worker -l info
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    networks:
+      - pavssv-network
+
+networks:
+  pavssv-network:
+    driver: bridge
 
 volumes:
   pgdata:
-  media:
+  minio_data:
