--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
 # Django
-DJANGO_SECRET_KEY=change-me
+DJANGO_SECRET_KEY=change-me-in-production-use-strong-key
 DJANGO_DEBUG=1
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (Docker)
+# Database (PostgreSQL en Docker)
 POSTGRES_DB=pavssv
 POSTGRES_USER=pavssv
 POSTGRES_PASSWORD=pavssv
@@ -14,6 +14,14 @@ POSTGRES_PORT=5432
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
 
-# Storage
-# Usar ruta relativa para desarrollo local
-# MEDIA_ROOT=/app/server/media
+# Storage - MinIO (S3 compatible)
+USE_S3_STORAGE=true
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin123
+AWS_S3_ENDPOINT_URL=http://minio:9000
+AWS_STORAGE_BUCKET_NAME=pavssv-artifacts
+AWS_INPUTS_BUCKET=pavssv-inputs
+AWS_ARTIFACTS_BUCKET=pavssv-artifacts
+AWS_EXPORTS_BUCKET=pavssv-exports
+AWS_S3_REGION_NAME=us-east-1
+AWS_DEFAULT_ACL=private
