--- a/server/.env.example
+++ b/server/.env.example
@@ -37,6 +37,7 @@ MINIO_DOMAIN=localhost
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_S3_ENDPOINT_URL=http://minio:9000
+AWS_S3_PUBLIC_URL=http://localhost:9000
 AWS_S3_REGION_NAME=us-east-1
 AWS_S3_SIGNATURE_VERSION=s3v4
 
