--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -78,14 +78,17 @@ services:
     env_file:
       - .env
     environment:
-      # Configuración de storage (MinIO/S3)
-      USE_S3_STORAGE: ${USE_S3_STORAGE:-true}
+      # Configuración de storage (MinIO/S3) - FORZAR ACTIVACIÓN
+      USE_S3_STORAGE: "true"
       AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
       AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
-      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
-      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
-      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
-      AWS_S3_SIGNATURE_VERSION: ${AWS_S3_SIGNATURE_VERSION:-s3v4}
+      AWS_STORAGE_BUCKET_NAME: pavssv-artifacts
+      AWS_INPUTS_BUCKET: pavssv-inputs
+      AWS_ARTIFACTS_BUCKET: pavssv-artifacts
+      AWS_EXPORTS_BUCKET: pavssv-exports
+      AWS_S3_ENDPOINT_URL: http://minio:9000
+      AWS_S3_REGION_NAME: us-east-1
+      AWS_S3_SIGNATURE_VERSION: s3v4
       AWS_S3_FILE_OVERWRITE: "false"
       AWS_DEFAULT_ACL: "private"
       # Database
@@ -115,12 +118,17 @@ services:
     env_file:
       - .env
     environment:
-      USE_S3_STORAGE: ${USE_S3_STORAGE:-true}
+      # Storage MinIO/S3 - FORZAR ACTIVACIÓN
+      USE_S3_STORAGE: "true"
       AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
       AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
-      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
-      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
-      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
+      AWS_STORAGE_BUCKET_NAME: pavssv-artifacts
+      AWS_INPUTS_BUCKET: pavssv-inputs
+      AWS_ARTIFACTS_BUCKET: pavssv-artifacts
+      AWS_EXPORTS_BUCKET: pavssv-exports
+      AWS_S3_ENDPOINT_URL: http://minio:9000
+      AWS_S3_REGION_NAME: us-east-1
+      # Database
       POSTGRES_HOST: db
       USE_SQLITE: "0"
     volumes:
