--- a/server/.env
+++ b/server/.env
@@ -16,7 +16,7 @@ CELERY_RESULT_BACKEND=redis://redis:6379/1
 
 # Storage - MinIO (S3 compatible)
 USE_S3_STORAGE=true
-AWS_ACCESS_KEY_ID=minioadmin
+AWS_ACCESS_KEY_ID=minioadmin    
 AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_S3_ENDPOINT_URL=http://minio:9000
 AWS_STORAGE_BUCKET_NAME=pavssv-artifacts
@@ -25,3 +25,32 @@ AWS_ARTIFACTS_BUCKET=pavssv-artifacts
 AWS_EXPORTS_BUCKET=pavssv-exports
 AWS_S3_REGION_NAME=us-east-1
 AWS_DEFAULT_ACL=private
+AWS_S3_SIGNATURE_VERSION=s3v4
+
+# =============================================================================
+# Celery (Background Tasks)
+# =============================================================================
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/1
+
+# =============================================================================
+# CORS Configuration
+# =============================================================================
+# Comma-separated list of allowed origins
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8001
+
+# =============================================================================
+# CSRF Configuration
+# =============================================================================
+CSRF_TRUSTED_ORIGINS=http://localhost:8001,http://127.0.0.1:8001
+
+# =============================================================================
+# Security Settings (Production)
+# =============================================================================
+# Enable HTTPS redirect in production
+SECURE_SSL_REDIRECT=false
+
+# =============================================================================
+# Logging
+# =============================================================================
+DJANGO_LOG_LEVEL=INFO
