--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -37,8 +37,8 @@ services:
       - "9000:9000"   # API S3
       - "9001:9001"   # Console Web
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin123}
+      MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY:-minioadmin123}
       # Configuración de identidad para migración a AWS S3
       MINIO_DOMAIN: ${MINIO_DOMAIN:-localhost}
     volumes:
@@ -47,7 +47,7 @@ services:
       - pavssv-network
     command: server /data --console-address ":9001"
     healthcheck:
-      test: ["CMD", "mc", "ready", "local"]
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -62,7 +62,7 @@ services:
       - pavssv-network
     entrypoint: >
       /bin/sh -c "
-      mc alias set myminio http://minio:9000 $${MINIO_ROOT_USER:-minioadmin} $${MINIO_ROOT_PASSWORD:-minioadmin123};
+      mc alias set myminio http://minio:9000 $${AWS_ACCESS_KEY_ID:-minioadmin} $${AWS_SECRET_ACCESS_KEY:-minioadmin123};
       mc mb --ignore-existing myminio/pavssv-inputs;
       mc mb --ignore-existing myminio/pavssv-artifacts;
       mc mb --ignore-existing myminio/pavssv-exports;
@@ -80,17 +80,17 @@ services:
     environment:
       # Configuración de storage (MinIO/S3) - FORZAR ACTIVACIÓN
       USE_S3_STORAGE: "true"
-      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
-      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
-      AWS_STORAGE_BUCKET_NAME: pavssv-artifacts
-      AWS_INPUTS_BUCKET: pavssv-inputs
-      AWS_ARTIFACTS_BUCKET: pavssv-artifacts
-      AWS_EXPORTS_BUCKET: pavssv-exports
-      AWS_S3_ENDPOINT_URL: http://minio:9000
-      AWS_S3_REGION_NAME: us-east-1
-      AWS_S3_SIGNATURE_VERSION: s3v4
-      AWS_S3_FILE_OVERWRITE: "false"
-      AWS_DEFAULT_ACL: "private"
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-minioadmin}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-minioadmin123}
+      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
+      AWS_INPUTS_BUCKET: ${AWS_INPUTS_BUCKET:-pavssv-inputs}
+      AWS_ARTIFACTS_BUCKET: ${AWS_ARTIFACTS_BUCKET:-pavssv-artifacts}
+      AWS_EXPORTS_BUCKET: ${AWS_EXPORTS_BUCKET:-pavssv-exports}
+      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
+      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
+      AWS_S3_SIGNATURE_VERSION: ${AWS_S3_SIGNATURE_VERSION:-s3v4}
+      AWS_S3_FILE_OVERWRITE: ${AWS_S3_FILE_OVERWRITE:-false}
+      AWS_DEFAULT_ACL: ${AWS_DEFAULT_ACL:-private}
       # Database
       POSTGRES_HOST: db
       USE_SQLITE: "0"
@@ -100,6 +100,7 @@ services:
       - "8001:8001"
     command: >
       sh -c "python manage.py migrate --noinput &&
+             python manage.py collectstatic --noinput &&
              python manage.py runserver 0.0.0.0:8001"
     depends_on:
       db:
@@ -120,14 +121,17 @@ services:
     environment:
       # Storage MinIO/S3 - FORZAR ACTIVACIÓN
       USE_S3_STORAGE: "true"
-      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER:-minioadmin}
-      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin123}
-      AWS_STORAGE_BUCKET_NAME: pavssv-artifacts
-      AWS_INPUTS_BUCKET: pavssv-inputs
-      AWS_ARTIFACTS_BUCKET: pavssv-artifacts
-      AWS_EXPORTS_BUCKET: pavssv-exports
-      AWS_S3_ENDPOINT_URL: http://minio:9000
-      AWS_S3_REGION_NAME: us-east-1
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-minioadmin}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-minioadmin123}
+      AWS_STORAGE_BUCKET_NAME: ${AWS_STORAGE_BUCKET_NAME:-pavssv-artifacts}
+      AWS_INPUTS_BUCKET: ${AWS_INPUTS_BUCKET:-pavssv-inputs}
+      AWS_ARTIFACTS_BUCKET: ${AWS_ARTIFACTS_BUCKET:-pavssv-artifacts}
+      AWS_EXPORTS_BUCKET: ${AWS_EXPORTS_BUCKET:-pavssv-exports}
+      AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL:-http://minio:9000}
+      AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME:-us-east-1}
+      AWS_S3_SIGNATURE_VERSION: ${AWS_S3_SIGNATURE_VERSION:-s3v4}
+      AWS_S3_FILE_OVERWRITE: ${AWS_S3_FILE_OVERWRITE:-false}
+      AWS_DEFAULT_ACL: ${AWS_DEFAULT_ACL:-private}
       # Database
       POSTGRES_HOST: db
       USE_SQLITE: "0"
