--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,6 +18,9 @@ boto3>=1.34,<2
 
 # Security
 argon2-cffi>=23.1,<24
+
+# Static Files (Production)
+whitenoise>=6.6,<7
 # Servidor de producción
 gunicorn>=22.0,<23
 # AWS Secrets Manager (para producción)
