--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,6 +18,8 @@ boto3>=1.34,<2
 
 # Security
 argon2-cffi>=23.1,<24
+django-axes>=7.0,<8
+django-simple-captcha>=0.6,<1
 
 # Static Files (Production)
 whitenoise>=6.6,<7
